governance-shared/baselines/3.7.0/ChronoPM-Project/references/01-daily-report-rules.md
# 日报生成约束规则

本规则适用于个人工作汇报解析、项目日报、周报的生成与联动处理。模板文件统一存放于 `assets/templates/`。

> **v2.0.0 体系说明**：独立个人日报文件与个人进度汇总文件已删除；成员工作汇报统一解析后写入待办文件（`todos/{date}/{owner}.md`）的工作日志段，个人进度由待办文件实时聚合。
>
> **v2.1.0 两步流程（需求十三）**：日报处理升级为两步——① 日报原文逐字存档到待办文件 **§2 日报存档段**；② 解析加工结果写入 **§3 工作日志段**并映射待办字段（见 §1.5）。本规则内凡引用“工作日志段”处均指待办文件 §3。

---

## 1. 个人工作汇报解析

### 1.0 录入归属判定（v3.0.0 前置，MANDATORY）

处理任何工作汇报 / 口述 / 粘贴前，必须先判定内容归属（读 `context/project-brief.md`）：

1. **疑似他项目**（提及他项目名、非本项目模块/合同、或与 brief 关联度低）→ 拆分展示，他项目部分标「待点项目」，**禁止写入本项目待办/日报事实源**。
2. **本项目** → 按后续条款照常写入。
3. **他项目**（已点名）→ 只输出「请到 {项目} 的 ai 对话写入」，**禁止代写他项目事实源**。
4. 混报（一份汇报含多项目）→ 先拆后写：本项目段落入库，他项目段落仅分流指引。

本条与 DF-016（非本项目进度不入库）同向；跨项目可见性由 ChronoPM-Portfolio 只读聚合，本包不镜像。

### 1.1 输入来源

成员工作汇报来源包括：成员直接提交的工作进展文本（口述/粘贴）、会议纪要中提取的行动项、待办文件中的状态变更反馈。

### 1.2 落点与格式

v2.0.0 起不再创建独立个人日报文件。汇报按 v2.1.0 两步流程落入该成员当日待办文件 `todos/{date}/{姓名}.md`：① 日报原文逐字存档到 **§2 日报存档段**（先存档，禁止只存加工摘要）；② 解析加工结果写入 **§3 工作日志段**（段结构见 `assets/templates/personal-daily-todo-template.md`：今日完成 / 进行中 / 阻塞事项 / 潜在风险 / 投入工时），进度/问题描述按 §1.5 映射规则落待办字段。待办状态变化同步更新待办清单行。

### 1.2a 禁止写入旧路径（v2.0.0 强制约束）

**禁止行为**：AI 不得在任何情况下将个人工作汇报写入以下旧路径：
- `reports/daily/personal/`（任何子目录层级）
- `summaries/{name}-progress.md`

**强制落点（对齐需求十三两步流程）**：个人工作汇报必须写入 `todos/{date}/{owner}.md`，两步落点：① 日报原文逐字存档到 **§2 日报存档段**（先存档，禁止只存加工摘要）；② 解析加工结果写入 **§3 工作日志段**（段结构见 `assets/templates/personal-daily-todo-template.md`），进度/问题描述按映射规则落待办字段（见 §1.5）。

**文件不存在时的处理**：若当日待办文件不存在，AI 必须：
1. 基于 `assets/templates/personal-daily-todo-template.md` 创建 `todos/{date}/{owner}.md`
2. 填写 §0 人员信息段（若已知）
3. 将日报原文存档到 §2 日报存档段，解析加工结果写入 §3 工作日志段
4. 同步更新 `todos/{date}/_index.md` 绑定文件

**违规处理**：若 AI 检测到自身即将写入旧路径，必须立即中止并输出警告：「⚠️ 违反 v2.0.0 日报落点规则，已中止写入。正确路径：todos/{date}/{owner}.md」。

### 1.2b 术语归一化预处理（汇报解析前置步骤）

解析工作汇报前，AI 必须执行术语归一化预处理，流程要点：读取词库 → 先 confirmed 静默替换再处理纠错映射 → 未命中新术语按置信度判定入 `pending` → 生成标准化输入送入解析 → 输出保留原文片段+归一化结果+状态。`pending` 三层模型、禁止事项、置信度判定与归一化优先级详见 `17-domain-glossary-rules.md` §4/§6（完整九步流程）。

### 1.3 处理规则

1. 汇报中提及的任务进展必须关联待办编号（如有），编号缺失时 AI 应提示补充，不可自行编造。
2. 汇报中提到"可能""担心""如果"等不确定表述，**先输出识别判定卡**（三问 + 合句式建议），禁止见词直接登记风险册。完整定义见 04 号 §1.2。
3. 汇报中提到"无法""阻塞""等待"等，先走判定卡区分问题 vs 风险，禁止见词直接登记。
4. 同一人同一天多次提交时，必须**合并追加**到当日待办文件的 §3 工作日志段，不得覆盖。
5. 合并规则：
   - **今日完成**：追加到列表末尾，保留原事项。
   - **进行中**：同任务有进度时更新描述，新任务追加。
   - **阻塞事项**：追加新阻塞，保留未解决项；已解决标记「已解决」。
   - **潜在风险**：追加新风险，保留原风险。
   - **投入工时**：同模块累加，不同模块新增行。
6. 每次合并后，在待办文件变更日志段追加一行合并记录。
7. 检测到当日已有工作日志记录时，提示「检测到 {姓名} {日期} 已有工作日志，将执行合并而非覆盖」，并在合并后输出合并摘要。

### 1.3a 日报合并机制（DF-003：白天同步 + 晚间跨时点合并）

**扩展 §1.3 合并规则的新增场景**（内置默认偏好 DF-003）：

| 场景 | 触发 | 处理 |
|---|---|---|
| 白天 PM 同步 | PM 白天口头/消息同步某成员进度 | 自动记为该成员当日日报（两步流程落入其待办文件），标注来源“PM 同步” |
| 晚间自写日报 | 成员晚间提交自写日报 | 作为补充自动合并（同 §1.3 合并规则，不覆盖白天记录） |
| 歧义处理 | 白天同步与晚间自写内容有歧义 | 编号罗列请 PM 逐条确认，不得自行裁决 |

合并规则与 §1.3 相同，仅触发时机不同（跨时点合并）；每次合并同样在待办文件 §6 变更日志段追加合并记录。

### 1.4 资源变动检测（本项目）

AI 必须扫描工作汇报中的本项目资源变动关键词：

| 触发关键词 | 检测意图 | 联动动作 |
|---|---|---|
| 被抽调 / 借调 / 调往 / 支援其他项目 | 人员流出 | 提示更新本项目 `resources/resource-register.md` 状态 + 生成本项目 `resources/transfer-log.md` 流转记录 |
| 新增人员 / 加入团队 / 报到 / 到岗 | 人员流入 | 提示更新本项目 `resource-register.md` 新增记录 |
| 请假 / 休假 / 产假 / 病假 / 事假 | 临时不可用 | 提示状态「休假」+ 判断是否触发 B 角接管 |
| 离职 / 辞职 / 离场 / 退出 | 人员流出（永久） | 提示状态「已离场」+ 生成流转记录 + 评估知识交接风险 |
| 转岗 / 角色变更 / 换项目 | 角色变更 | 提示更新角色 + 生成流转记录 |
| 兼顾 / 兼任 / 同时负责 | 分配方式变更 | 提示分配方式「兼职」+ 评估风险等级 |

**处理规则：**

1. 检测到关键词后，AI 不得自行修改 `resource-register.md` / `transfer-log.md`，而是在输出末尾附「资源变动建议更新清单」，由项目经理确认后执行。
2. 若流出涉及关键路径上的唯一负责人且无 B 角，必须以高优先级警告提示。
3. 若人员变动导致本项目可用人力低于容忍度下限，标注「资源风险触发」。
4. 汇报中出现他项目抽调/支援 → 本项目只记本侧流转；他项目登记请提示到对应项目对话，禁止代写。跨项目共享人力索引由 ChronoPM-Portfolio 只读聚合。

**候选资源变更：**

1. 汇报中某人参与本项目但 `resource-register.md` 未登记时，AI **不得自动添加**，只能输出「候选资源变更」。
2. 候选变更标记为待确认，由项目经理决定是否更新 register。
3. 人员变动信号只能产生候选变更，不得直接覆盖 register。
4. **禁止行为**：不得将汇报中出现的人员自动认定为正式成员；不得未经确认修改 register。

**输出格式要点：** 候选资源变更与资源变动建议更新清单均内联在输出末尾，含列 `来源 | 当前状态 | 一致性判断 | 建议操作`；建议更新清单再附加清单表头（`Resource ID | 建议动作 | 原因 | 优先级`），由项目经理确认后执行，AI 不得直接改 register。

### 1.5 日报处理两步流程（v2.1.0 新增，需求十三）

| 步骤 | 动作 | 规则要求 |
|---|---|---|
| 1. 存档 | 日报原文逐字写入 `todos/{date}/{owner}.md` **§2 日报存档**章节 | 独立章节，含收集时间/来源标注；禁止只存加工摘要；存档是映射的前置步骤（先存档后映射） |
| 2. 映射 | 从存档内容提取进度/问题描述，匹配当天待办清单条目并写入对应字段 | 进度百分比→核心执行表“进度”列；bug 数/回归项→备注区对应待办行；映射结果在 §2 日报存档段尾部登记（可溯源） |

**映射匹配规则**：按待办标题/关键词匹配日报中的业务描述（如日报提“外资公司”→匹配标题含“外商投资企业”的待办）。

**待归属处理**：匹配不到任何待办的进展 → 标记“待归属”，由 PM 确认是否新建待办；**禁止 AI 自动新建待办**（联动安全底线 2：查询触发生成的内容需来源标注 + 告知 PM + 否认即删）。匹配前须过 §1.0 录入归属判定，他项目进展不得标待归属后入库。

**工作日志强制关联待办（v3.3.0）**：写入 §3 时每条必须带 `TD Ref: TD-{缩写}-{YYYYMMDD}-{NNN}` 或 `待归属`。能对应 §1 某条待办则自动填充；不能确定则标待归属并编号罗列请 PM 确认。禁止 AI 自动新建待办。存量 §3 无 TD Ref 视为未关联；PM 可要求「回填工作日志」做辅助匹配（高置信候选清单 → 确认后写）。

**历史迁移文件除外**：§7.3.2b 迁移产生的历史待办文件（带 migration-source 标记）仅含 §0 + §3 工作日志段，无 §2 段；历史日报原文逐字合并进 §3（禁止摘要化），不适用本两步流程（本流程仅适用升级后的活跃日报）。

### 1.6 能耗投喂登记（v3.0.0）

日报处理流程中，若 PM 投喂内部系统能耗数值，写入该人当日待办文件 **§0.6 能耗记录**（滚存规则见 `22-carried-over-rules.md`）。

- 数据必须由 PM 投喂（内部系统统计值），AI **禁止自行推算**具体数值。
- 无数据时标「—」并提示 PM 投喂。
- 单位取自 `context/project-context.md`「成本核算方式」；未登记则单位标「待登记」，不得硬编码具体单位名。
- 属直接落库级（见 00 号 §3.3），仍登记 pending-changes。

---

## 2. 项目日报

### 2.1 生成规则

项目日报按区间实时汇聚：入口 = 当日 `todos/{date}/_index.md` 圈定成员 → 读各人待办 md → 汇总。进度与工作日志以 todos 为准；风险/问题/成本实时读登记册与 Change Log（不写入存根正文当事实源）。

```
当日 todos/{date}/*.md → 汇聚 → 项目日报文件
```

> **存根范式（v3.4.0，废止 v2.1.0 R-3「落盘缓存」）**：历史日期（d < 今天）生成后即不可变存根，同日再查直读、禁止重汇聚。当日文件可覆写（Q21），次日自动视为存根。旧「缓存需同步维护 / 月度索引」机制已废。

### 2.2 项目日报模板

项目日报**按需生成，无独立模板**（v2.1.0 起不再引用 project-daily-template）。格式要点：YAML 头（`doc_type: project-daily`，`covered: [d, d]`，`generated_at`，`source: todos（不可变留档）`）+ 八段结构（今日进展/任务完成/进行中/阻塞与问题/新增风险/里程碑型 WP 影响/成本与工时/明日重点）+ 建议更新清单 + 信息来源 + 不确定项。

### 2.3 汇总规则

1. 项目日报必须覆盖当日所有有记录的成员待办文件，不可遗漏。
2. 项目日报必须关联当前里程碑型 WP（PLAN 文件 is_milestone=true 的 WP）。
3. 任务状态以事实源（待办文件）为准，工作日志与待办清单不一致时标注差异。
4. 成本数据必须与 `plans/budget.md` 交叉验证。
5. 成员汇报之间存在矛盾时（如同一任务两人报告不同状态），必须标注矛盾并提示项目经理确认。
6. 必须与本项目 `resources/resource-register.md` 交叉验证人员可用性，未登记则提示补充。跨项目共享人员查询请使用 ChronoPM-Portfolio。
7. 汇报中的跨项目协调事项标注 `[跨项目]` 并提示到对应项目对话 / Portfolio，本包不写入他项目事实源。

---

## 3. 周报

### 3.0 单项目周报落点

本项目周报写入 `reports/weekly/YYYY/YYYY-Wxx.md`（周号即区间）。生成链路：自然周 [周一, 周日] 内全部 `todos/{date}/{owner}.md` → 汇聚 → 周报。

**项目集汇总周报已迁 ChronoPM-Portfolio**。用户要求「写项目集周报」「汇总周报」时，提示到 Portfolio 对话，本包不生成集周报。

### 3.1 生成模式（v3.4.0 区间汇聚，废止每日累积草稿）

已完结周（周日 < 今天）生成即存根，同周再查直读。本周进行中实时汇聚，不落不可变存根。

**汇聚 5 步（必须输出数据完整性验证）**：
1. 成员发现：区间内每日 `_index.md` 并集 + resource-register「在组」人员
2. 待办按 TD 编号去重（同号按日期倒序取终态）；无 WP Ref 进「未绑定 WP」桶，禁止丢弃猜填
3. 按 WP 聚合进度；本周无待办的 WP 仍列出
4. 风险/问题读条目 Change Log / 状态变更日期（禁止文件 mtime）；无日期标「无法判定是否本周」
5. 对齐九段模板；输出建议更新片段走人工确认，禁止直接覆盖已确认周报

跳过任一步必须标注警告。

### 3.2 周报模板

完整模板见 `assets/templates/weekly-report-template.md`。格式要点：YAML 头（doc_type: weekly-report）+ 九段结构（本周概要/完成/新增风险/新增问题/延期待办/里程碑型 WP 状态/成本与预算/需协调事项/下周计划）+ 信息来源。

### 3.3 更新规则

1. 生成周报时按 §3.1 五步从 todos 整周汇聚，输出建议更新片段（附区间与数据完整性验证），格式见 `assets/templates/weekly-report-template.md`。禁止每日往周报草稿里追加缓存。
2. 用户确认后落盘；已完结周文件即为存根，不得改写。
3. 自然周一切一文件（`YYYY-Wxx.md`）；上周已完结则成存根。
4. 周报中引用的所有 ID 必须与事实源文件一致。
5. **实体枚举校验**：生成周报时，涉及实体（市场主体/模块/子系统）枚举的段落，必须从 WP §3b 实体行聚合，不得从待办标题文本中摘取。§3b 无行时，从待办文件逐条提取并标注“推断，未经台账校验”。
6. **状态推导标注**：周报中涉及任务/模块状态的描述，须检查是否有 §6 集成审查发现的推导状态（里程碑终态事件触发的状态推导），有则在周报中标注推导状态与待办文件状态的差异。

### 3.4 项目集汇总周报

已迁 ChronoPM-Portfolio。本包只维护单项目周报（§3.0 / §3.3）。

---

## 4. 报告存根判重（v3.4.0，废止 §4.1 月度索引与 §4.2 同步索引）

存量 `reports/daily/project/YYYYMM/index.md`、`reports/daily/index.md` 若存在：**停维不删**。AI 不再维护 Todo Sync / Task Sync 列。目录仍为 YYYYMM 单级（R-2）。

### 4.1 存根 YAML 头（所有报告）

`doc_type`（project-daily / weekly / timeline-report）+ `covered: [start, end]` + `generated_at` + `source: todos（不可变留档）`。

### 4.2 判重四案（请求区间 [S,E] vs 已有存根 [s,e]）

1. **精确重合** → 直读存根，禁止重汇聚（唯一省 token）
2. **超出**（已有 ⊂ 请求）→ 整段 [S,E] 从 todos 重汇聚，新文件另名，旧存根不动
3. **相交非包含** → 同案 2
4. **真子集** → 提示已有覆盖存根；默认整段实时汇聚（Q19，存根无法按日切片）

非精确重合一律整段重汇聚。禁止把两个存根拼接当新报告。禁止凭旧存根外推未覆盖区间。含今天的区间一律实时汇聚（当日 todos 仍可变）。回改历史待办须登记 pending：受影响存根可能失效。

## 4a. 时间线报（v3.4.0）

任意区间项目进度报告。落点：`reports/timeline/YYYY-MM-DD_YYYY-MM-DD-[project]-时间线报.md`。

- **懒建**：目录不预建、不入 init、不入 06 号标准结构。**首次生成时创建** `reports/timeline/`。缺该目录不是健康检查 P0。
- 月报 = 时间线报的自然月特例（`YYYY-MM-01_YYYY-MM-月末`），**不复活** `reports/monthly/`。
- 生成前扫描 `reports/timeline/` 文件名做 §4.2 四案判重。结构：YAML 头 + 区间声明 + 进展/风险/问题/里程碑/成本汇总。风险/成本仍实时读登记册。

---

## 5. 汇报→待办自动联动

### 5.1 联动载体

v2.0.0 起，成员个人进度不再维护独立汇总文件（原 `summaries/{name}-progress.md` 已删除），统一由待办文件承载：当前任务/进度/工时看待办清单与工作日志段，风险/问题关联看待办表风险 Ref/问题 Ref 列，近期进展看工作日志。

### 5.2 自动联动规则

当某个成员的工作汇报被新增或更新时，AI 必须自动执行以下联动：

| 联动项 | 源 | 目标 | 规则 |
|---|---|---|---|
| 日报存档 | 汇报原文 | `todos/{date}/{owner}.md` §2 日报存档段 | 逐字存档（先存档后映射，见 §1.5） |
| 待办状态同步 | 汇报"今日完成"/"进行中" | `todos/{date}/{owner}.md` 核心执行表 | 已完成→建议改为已完成；进度变化→更新**核心执行表“进度”列**（v2.1.0 起百分比落点统一为进度列，D-26） |
| 工作日志记录 | 汇报全文解析结果 | `todos/{date}/{owner}.md` §3 工作日志段 | 合并追加（见 §1.3）|
| 里程碑关联 | 汇报提及里程碑 | 待办行 WP Ref | 核对是否指向里程碑型 WP |
| 风险联动 | 汇报"担心"“可能”“如果” | 识别判定卡 →（确认后）`risks/risk-register.md` + 待办风险 Ref | 先判定卡，经三问后才可 SUGGEST 登记 |
| 问题联动 | 汇报"阻塞"“无法”“等待” | 识别判定卡 →（确认后）`issues/issue-register.md` + 待办问题 Ref | 先判定卡，禁止见词直登 |
| 工时统计 | 汇报投入工时 | 工时与变更表工时列 | 累加到对应待办 |
| 需求进展同步 | 汇报完成/进行中事项 | `requirements/requirement-register.md` | 若关联 Requirement Ref → 检查需求状态是否与汇报进展一致，不一致则建议更新 |

> **进度↔状态双轨仲裁（01 号双轨仲裁）**：状态列为唯一权威源，进度列为辅助量化描述。① 状态=已完成 ⇒ 进度必须 100%；若进度 < 100% 自动修正为 100% 并记待办文件 §6 变更日志段；② 若来源是日报且明确 100% / 「已完成」且映射到对应待办（DF-013 / 方案 D-23），允许自动完成（写入 + Change Log + 一句话告知 + 登记 pending）；**非日报来源维持不自动提升状态**（已完成为终态，高风险需 PM 确认，对齐 §5.4 权限矩阵），仅输出待办联动建议；③ 状态=已取消/已转出 ⇒ 进度保留当前快照，不强制清零。
>
> 本条 v2.1.0 决策号曾标 D-26，与 v3.0.0 方案 D-26（漏扫文件）撞号，落地以「01 号双轨仲裁」称呼。

### 5.3 联动输出格式

检测到汇报更新时，AI 输出「待办联动建议」，含源汇报标识与一张建议表（联动项 / 目标文件 / 建议动作 / Need Confirmation）。每个动作按 5.4 权限标注是否需要确认。

> “Need Confirmation”列含义：`proactive` 模式下，低/中风险（含待办文件/risk/issue 的过程性更新）填“否（写为待确认）”（写入事实源并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`）；终态（已完成/关闭/已确认/离场）与高风险项填“是”（须确认后才写）。

### 5.4 联动权限规则

| 联动目标 | 权限 | 说明 |
|---|---|---|
| `todos/{date}/{owner}.md`（§2 日报存档段） | 低风险，可主动写入 | 原文存档，非状态事实（v2.1.0 新增） |
| `todos/{date}/{owner}.md`（§3 工作日志段） | 低风险，可主动更新 | 过程记录，非状态事实 |
| `todos/{date}/{owner}.md`（待办清单/核心执行表） | 过程性更新可写为待确认 | 过程性更新（如状态中途/进度列/Owner/Due Date）可写入并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`；终态（已完成）默认必须确认。**例外（D-23 / DF-013）**：日报明确 100% / 「已完成」且已映射对应待办 → 先写后告知级自动完成，仍登记 pending |
| `risks/risk-register.md` | 过程性更新可写为待确认 | 过程性更新（如候选新增开放/描述变化）可写入并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`；终态（已关闭/已确认）仍高风险需确认 |
| `issues/issue-register.md` | 过程性更新可写为待确认 | 过程性更新（如候选新增开放/描述变化）可写入并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`；终态（关闭）仍高风险需确认 |

### 5.5 反向查询

用户查询某人工作情况时，AI 应优先读取该人近期待办文件（核心执行表 + §3 工作日志段），而非逐日扫描历史归档；如需某天细节再读取对应日期待办文件。查询链路：`该人当前待办 → 输出待办+进度+风险 Ref+近期工作日志 → 需要时读具体日期待办文件`。

### 5.6 待办文件同步

汇报处理完成后，AI 必须先对"明日计划/本周计划"条目执行 **WF-8 归属判定**（见 `00-pm-main-rules.md` §9 WF-8），再落待办文件：

1. 条目属**正式任务**（有 Owner + 截止时间 + 交付物）→ 走 WF-8 归属判定（归属 WP / 独立任务，证据不足追问）后落待办文件（待办带 WP Ref + Due Date），**禁止只口头记录不落待办文件**。
2. 条目属**一次性提醒**（三要素缺失）→ 仅在输出中呈现并提示，不落待办。
3. 待办落库后同步更新当日绑定文件 `todos/{date}/_index.md`（当日参与人员与待办概览）。

### 5.7 批量联动

用户一次性提交多份汇报时，AI 必须：逐份解析、为每成员分别输出联动建议、合并待办更新建议（同一待办多人提及合并为一条）、合并风险/问题更新建议（去重）、统一输出建议更新清单。

## 6. 日报集成审查模式

### 6.1 触发时机

每次日报处理流程中，AI 在完成日报解析（§1-§3）和个人进度联动（§5）后、归档检查（§5.8）前，必须执行集成审查。

### 6.2 审查维度

AI 必须对比以下维度并在输出中告知变化：

| 对比维度 | 对比源 | 输出内容 |
|---|---|---|
| 计划 vs 完成 | 昨日日报"明日计划" / 昨日待办文件 vs 今日"今日完成" | 哪些计划已完成、哪些未完成、未提及的计划项 |
| 问题/风险变化 | issue-register / risk-register 中 open 项 vs 日报提及 | 哪些已关闭、哪些新增、哪些状态变化 |
| 任务进度偏差 | 待办文件中关联任务状态 vs 日报报告进展 | 进度超前/滞后/一致的条目 |
| 里程碑事件 vs 待办文件状态 | 日报/纪要中的终态事件 vs 待办文件任务状态 | 推导状态与待办文件不一致的条目（见 `00-pm-main-rules.md` §10.2） |

### 6.3 输出格式

集成审查结果随日报处理输出一并呈现：

```
## 日报集成审查

| 维度 | 已关闭/完成 | 新增/变化 | 未提及/需关注 |
|---|---|---|---|
| 计划对照 | ... | ... | ... |
| 风险/问题 | ... | ... | ... |
| 任务进度 | ... | ... | ... |
```

## 7. 主动提问规则

### 7.1 触发时机

集成审查（§6）完成后，AI 必须基于审查结果主动提问。

### 7.2 审查角度

AI 必须从以下角度审视，对缺失项逐一提问：

1. **阻塞解除**：日报中的阻塞项是否有解除计划或时间表？
2. **风险应对**：新识别或升级的风险是否有应对措施和负责人？
3. **关键任务遗漏**：待办文件中 P0/P1 任务今日无进展提及，是否被遗漏？
4. **明日计划可行性**：明日计划是否考虑了当前阻塞和资源约束？

### 7.3 输出格式

```
## 主动提问

1. [阻塞解除] {具体问题}
2. [风险应对] {具体问题}
3. [遗漏提醒] {具体问题}
4. [可行性] {具体问题}
```

无待提问项时输出“主动提问：✅ 无需补充”，不跳过此步骤。

### 5.8 归档触发检查（日报处理流程末尾步骤）

每次日报处理流程末尾，AI 必须执行 Change Log 归档触发检查：

1. 读取活跃区 Change Log（如 `requirements/change-log.md`、`risks/.../change-log.md` 等），判断是否满足归档条件。
2. 归档触发条件：活跃区 Change Log **超过 50 行**，或**超过 30 天**未归档。
3. 满足任一条件时，触发按月归档：将活跃区条目按月份归档到 `change-log/archive/YYYYMM-change-log.md`（详见 `06-file-rules.md`），并同步维护 `change-log/index.md` 月份导航索引。
4. 归档后活跃区仅保留当前活跃条目，归档区与活跃区不得重复。
5. 与 `14-self-check-rules.md` 的 D12 归档检查联动；按本项目 `change-log/archive/` 粒度归档。
6. **通用归档检查**：在 Change Log 归档检查后，顺带执行 06 号 §9"通用归档规则"中定义的全量实体归档检查（含 risk/issue/decision/transfer-log/resource/snapshot/outputs 累计型文件）。触发条件、归档目标与索引要求见 06 号 §9 通用归档表。
7. 归档检查结果随当日建议更新清单一并输出；涉及移动/归档事实源文件的动作走 SUGGEST（待 PM 确认），仅派生视图刷新走 AUTO。

> 端到端工作流数据路径见 `00-pm-main-rules.md` §9（WF-1~WF-6）。本文件定义日报生成的详细规则，00号 §9 WF-2 定义日报处理的完整读/写路径，两者互补不替代。
